fixed sig misalign

--- a/biography/biography.css
+++ b/biography/biography.css
@@ -69,7 +69,7 @@ p::before {
     flex: 1 1 0%;
 }
 
-img {
+.bio-pic img {
     margin: 1rem;
     position: relative;
     left: 50%;
